# dz_bus_tracker_api

./: .dockerignore  .env-sample  .env.example  .gitignore  COMPREHENSIVE_API_TEST_REPORT.md  DOCKER_SETUP.md  DZ_BUS_TRACKER_AUDIT.md  DZ_BUS_TRACKER_REVIEW.md  Dockerfile  Dockerfile.test  FUNCTIONALITY_REPORT.md  Makefile  PROJECT_OVERVIEW.md  README.docker.md  README.md  SUGGESTED_FEATURES.md  TESTING_SUMMARY.md  TRACKING_ENHANCEMENTS.md  USER_TESTING_GUIDE.md  api_test.py  comprehensive_api_test.py  create_sample_data.py  create_test_users.py  docker-compose-prod.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  dockerignore  flutter_testing_coordinator.py  google-services.json  load_essential_fixtures.sh  load_fixtures.sh  manage.py  pyproject.toml  pytest.ini  quick_test.sh  requirements.txt  run_all_tests.sh  run_asgi_server.py  (+19 more)
celery_app/: __init__.py  app.py  celery.py  config.py
config/: __init__.py  asgi.py  celery.py  routing.py  storage_backends.py  urls.py  wsgi.py
fixtures/: 01_users.json  03_drivers.json  04_buses.json  05_lines.json  06_tracking.json  07_notifications.json  README.md  all_essential_data.json
nginx/: nginx.conf
requirements/: base.txt  local.txt  production.txt  test.txt
script/: clean_migrations.sh
scripts/: README.md  create_fixtures.py  entrypoint.sh  fix_permissions.py  fix_schema_warnings.py  health_check.sh  run_tests.sh  setup_dev.sh  setup_firebase.py
tasks/: base.py  buses.py  drivers.py  notifications.py  periodic.py  tracking.py
templates/: 404.html  tracking_map.html
(+284 files in other folders)
